Use Java 17 features in tests
* Collectors.toList
* Pattern matching